<resources>
    <string name="app_name">CompanyList</string>
    <string name="company_list_activity_label">Company List</string>
    <string name="company_detail_activity_label">Company Detail</string>

    <!--Company Detail Title Labels-->
    <string name="detail_phone_card_title">Phone Number</string>
    <string name="detail_address_card_title">Address</string>
    <string name="detail_more_info_title">More Info</string>
    <string name="detail_store_id_title">Store ID</string>
    <string name="open_google_maps_button_title">Open in Google Maps</string>

    <!--Company Detail default info-->
    <string name="unknown">Unknown</string>
    <string name="no_data_available">No data available.</string>

    <!--Commonly used buttons-->
    <string name="ok">Ok</string>

    <!--Error Messages-->
    <string name="error_title">Error</string>
    <string name="data_connection_error_message">Could not connect to database.</string>
    <string name="cache_connection_error_message">Could not connect to cache.</string>
    <string name="unknown_error_message">Unknown error occurred.</string>

</resources>
